--- a/web/config/database.yml
+++ b/web/config/database.yml
@@ -23,7 +23,9 @@ default: &default
 
 development:
   <<: *default
-  database: web_development
+  database: postgres
+  username: postgres
+  password: ' '
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
