--- a/web/config/database.yml
+++ b/web/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: postgres
+  database: RubyOnRails
   username: postgres
   password: ' '
 
