--- a/web/config/database.yml
+++ b/web/config/database.yml
@@ -24,8 +24,8 @@ default: &default
 development:
   <<: *default
   database: RubyOnRails
-  username: postgres
-  password: ' '
+  username: rubyuser
+  password: password1
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
