Changed registration to talk to the api module

--- a/api/test/fixtures/registers.yml
+++ b/api/test/fixtures/registers.yml
@@ -5,13 +5,13 @@ one:
   lastname: MyString
   middlename: MyString
   age: MyString
-  integer: MyString
   username: MyString
+  password: MyString
 
 two:
   firstname: MyString
   lastname: MyString
   middlename: MyString
   age: MyString
-  integer: MyString
   username: MyString
+  password: MyString
