--- a/web/Gemfile
+++ b/web/Gemfile
@@ -5,8 +5,10 @@ ruby '2.5.1'
 gem 'httparty'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.2.1'
-gem 'will_paginate',
+gem 'will_paginate'
 gem 'bootstrap-will_paginate'
+gem 'jquery-ui-rails'
+gem 'bootstrap-datepicker-rails'
 # Use postgresql as the database for Active Record
 gem 'pg', '>= 0.18', '< 2.0'
 # Use Puma as the app server
